@startuml
class cubibon.callAssistant.speech2text.DesktopMicrophone {
- Int MIC_SAMPLE_SIZE_IN_BIT
- Int MIC_AUDIO_CHANNEL
- Float MIC_SAMPLE_RATE
+ InputStream? build()
}


interface cubibon.callAssistant.speech2text.Speech2TextStreamBuilder {
+ InputStream? build()
}

class cubibon.callAssistant.speech2text.Transcription$Companion {
+  UNKNOWN_TIME
+  UNKNOWN_CONFIDENCE
+  UNKNOWN_MESSAGE
}

class cubibon.callAssistant.speech2text.Transcription {
-  messageBuilder
+ String message
+ Double confidence
+ Long startTime
+ Long endTime
+ String sourceTag
+ <<Create>> Transcription(String,Double,Long,Long,String)
+ void merge(Transcription)
+ void reset()
+ Boolean equals(Any?)
+ Int hashCode()
+ String toString()
}


abstract class cubibon.callAssistant.speech2text.Speech2Text {
+  onResultCallbacks
+  onStartTranscribingCallbacks
+ <<Create>> Speech2Text(Speech2TextStreamBuilder)
+ void computeAsync(FrequentTimeout?,String)
}


class cubibon.callAssistant.speech2text.AwsTranscribe$Companion {
-  LANGUAGE_CODE
-  AUDIO_STREAM_CHUNK_SIZE_IN_BYTES
-  SAMPLE_RATE
-  MEDIA_ENCODING
-  MINIMUM_WORDS_FOR_PARTIAL_RESULT
-  TRANSCRIPTION_BUFFERING_TIME
}

class cubibon.callAssistant.speech2text.AwsTranscribe {
- TranscribeStreamingAsyncClient? client
- StartStreamTranscriptionRequest? request
- CompletableFuture<Void>? transcribeJob
-  bufferingTranscription
- Job? mergingJob
- Long? audioStreamStartTime
-  userStartedSpeaking
-  userIsSpeaking
+ String sourceTag
+ <<Create>> AwsTranscribe(Speech2TextStreamBuilder)
- TranscribeStreamingAsyncClient initClient()
- StartStreamTranscriptionRequest initRequest()
+ void doActivate(String)
+ void doComputeAsync(Unit,String)
- void getResponseHandler()
- List<Transcription> parseTranscriptions(List<Result>)
- void handleTranscriptions(List<Result>)
+ void doStop(String)
+ void doDeactivate(String)
}


class cubibon.callAssistant.speech2text.AudioStreamPublisher$Companion {
- SubscriptionImpl? currentSubscription
-  mutex
+ void stop()
}


class cubibon.callAssistant.speech2text.AudioStreamPublisher {
+ <<Create>> AudioStreamPublisher(InputStream,CentralizedLogger)
+ void subscribe(Subscriber<in AudioStream?>)
}

class cubibon.callAssistant.speech2text.SubscriptionImpl {
- ExecutorService executor
-  demand
-  isOpen
- <<Create>> SubscriptionImpl(Subscriber<in AudioStream?>,InputStream,CentralizedLogger)
- ByteBuffer getNextEvent()
+ void request(Long)
+ void cancel()
+ void stop()
}




cubibon.callAssistant.speech2text.Speech2TextStreamBuilder <|.. cubibon.callAssistant.speech2text.DesktopMicrophone
cubibon.callAssistant.Loggable <|-- cubibon.callAssistant.speech2text.DesktopMicrophone
cubibon.callAssistant.speech2text.Transcription +.. cubibon.callAssistant.speech2text.Transcription$Companion
cubibon.callAssistant.speech2text.CallbackInput <|.. cubibon.callAssistant.speech2text.Transcription
cubibon.callAssistant.speech2text.ReusableService <|-- cubibon.callAssistant.speech2text.Speech2Text
cubibon.callAssistant.speech2text.AwsTranscribe +.. cubibon.callAssistant.speech2text.AwsTranscribe$Companion
cubibon.callAssistant.speech2text.Speech2Text <|-- cubibon.callAssistant.speech2text.AwsTranscribe
cubibon.callAssistant.speech2text.AudioStreamPublisher +.. cubibon.callAssistant.speech2text.AudioStreamPublisher$Companion
org.reactivestreams.Publisher <|.. cubibon.callAssistant.speech2text.AudioStreamPublisher
org.reactivestreams.Subscription <|.. cubibon.callAssistant.speech2text.SubscriptionImpl
@enduml